--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,48 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+#contenedorDeForm {
+  padding-top: 10vh;
+}
+
+#alertMessage {
+  height: 60px;
+  display: none;
+}
+
+.center-me {
+  display: flex;
+  align-items: center;
+}
+
+.altura-select {
+  height: 40px;
+  width: 250px;
+}
+
+/* #modal::backdrop {
+    background-color: rgba(0, 0, 0, .5)
+}
+
+#modal {
+    max-width: 50ch;
+} */
+
+.footer-height {
+  max-height: 120px;
+}
+
+.btn-max-height {
+  height: 40px;
+}
+
+.verticalazo {
+  margin-top: 30px;
+}
+
+#advertencia {
+  display: none;
+}
+
+#mover {
+  padding-left: 25px;
+}
